moved files into app, my code is very broken. I spent the whole night trying to figuer out what was runserverside I kept getting errors

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 	"dependencies": {
 		"daisyui": "^4.11.1",
 		"firebase": "^10.12.1",
-		"qrcode": "^1.5.3"
+		"qrcode": "^1.5.3",
+		"svelte-spa-router": "^4.0.1"
 	}
 }
